2021-07-06 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix bug #3262.

2021-07-05 Visenri
    * src/pic14/glue.c
      src/pic16/glue.c
      src/SDCCast.c
      src/SDCCast.h
      src/SDCCglue.c
      src/SDCCicode.c
      src/SDCCval.c
      src/SDCCval.h
      Implemented partial support for conditional type reduction (patch #392), for now only used by SIZEOF.
      OR - XOR type reduction optimization (patch #392).
    * support/regression/fwk/include/testfwk.h
      support/regression/tests/sizeof.c
      Removed empty definition of __data for pdk from testfwk.h.
      Added tests for SIZEOF operator.
      
2021-07-04 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCClospre.hpp: fix bug #3166
	* support/regression/tests/bug-3166.c: enable test

2021-07-01 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  genMove_o improvements.

2021-07-01 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Function pointer call for --reserve-regs-iy when hl and bc are in use for register arguments.

2021-06-30 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCast.c (expandInlineFuncs): fix bug #3175

2021-06-30 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c,
	  src/z80/gen.c:
	  Improve tail call optimization.

2021-06-30 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/ralloc2.cc:
	  Assignment to / from global variables with non-free hl.

2021-06-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/main.c,
	  src/pdk/ralloc.c,
	  src/stm8/main.c,
	  src/stm8/ralloc.c,
	  src/z80/gen.c,
	  src/z80/main.c,
	  src/z80/ralloc.c:
	  Fix initialization of asmops for use of aopArg in _reg_parm.

2021-06-29 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/mcs51/gen.c (genPcall): fix bug #2994
	* support/regression/tests/bug-2993.c: reenable for mcs51-huge

2021-06-28 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/SDCCglue.c:
	  Fix bug #3253: patch by Oleg Endo
